--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -8,11 +8,15 @@
 
   <ItemGroup>
     <Folder Include="Helper\" />
-    <Folder Include="Service\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
