--- a/DotnetNetFramework/DapperTraditionalTest/DapperTraditionalTest/appsettings.json
+++ b/DotnetNetFramework/DapperTraditionalTest/DapperTraditionalTest/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true",
-    "FormalConnection": "Server=172.28.63.188;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TestDatabase;MultipleActiveResultSets=true",
+    "ClientLocalConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true",
+    "ClientFormalConnection": "Server=172.28.63.188;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogPath": {
