--- a/DotnetNetCore/DapperWithDependencyInjection/DapperWithDependencyInjection/appsettings.json
+++ b/DotnetNetCore/DapperWithDependencyInjection/DapperWithDependencyInjection/appsettings.json
@@ -4,6 +4,7 @@
     "ClientConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true"
   },
   "AppSettings": {
-    "SleepTime": 10
+    "SleepTime": 10,
+    "LogPath": "D:\\Logs\\Self"
   }
 }
