1. DapperTraditionalTest - Add support for dependency injection with dapper. 2. DapperWithDependencyInjection - Edit LogHelper class for modfied WriteLog method for add that method called class name and method name.

--- a/DotnetNetFramework/DapperTraditionalTest/DapperTraditionalTest/appsettings.json
+++ b/DotnetNetFramework/DapperTraditionalTest/DapperTraditionalTest/appsettings.json
@@ -1,13 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TestDatabase;MultipleActiveResultSets=true",
+    "SelfConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TestDatabase;MultipleActiveResultSets=true",
     "ClientLocalConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true",
     "ClientFormalConnection": "Server=172.28.63.188;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true"
   },
-  "Logging": {
-    "LogPath": {
-      "Default": "D:\\DapperTraditionalTest\\Log\\",
-      "Formal": "D:\\DapperTraditionalTest\\Log\\"
-    }
+  "AppSettings": {
+    "SleepTime": 10,
+    "LogPath": "D:\\Logs\\Self"
   }
 }
