--- a/DotnetNetFramework/DapperTraditionalTest/DapperTraditionalTest/DapperTraditionalTest.csproj
+++ b/DotnetNetFramework/DapperTraditionalTest/DapperTraditionalTest/DapperTraditionalTest.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
