--- a/DotnetNetFramework/DapperTraditionalTest/Utilities/Utilities.csproj
+++ b/DotnetNetFramework/DapperTraditionalTest/Utilities/Utilities.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
