1. Common modified StopwatchHelper change stopwatch initialize  from function to class constructor set it, then combine dependency injection register it to services. 2. Common modified LoggerHelper change log level name get method, use enum GetName method obtain name, then print log level to log file.

--- a/DotnetNetCore/DapperWithDependencyInjection/DapperWithDependencyInjection/appsettings.json
+++ b/DotnetNetCore/DapperWithDependencyInjection/DapperWithDependencyInjection/appsettings.json
@@ -4,6 +4,7 @@
     "ClientConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true"
   },
   "AppSettings": {
+    "Iterations": 1,
     "SleepTime": 10,
     "LogPath": "D:\\Logs\\Self"
   }
