--- a/DotNetFramework/DapperTraditionalTest/DapperTraditionalTest/appsettings.json
+++ b/DotNetFramework/DapperTraditionalTest/DapperTraditionalTest/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "ClientTestConnection": "Server=metadata=res://*/TNF12Model.csdl|res://*/TNF12Model.ssdl|res://*/TNF12Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.28.63.188;initial catalog=TNF12;user id=sa;multipleactiveresultsets=True;application name=EntityFramework&quot;",
     "SelfConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TestDatabase;MultipleActiveResultSets=true",
     "ClientLocalConnection": "Server=localhost;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true",
     "ClientFormalConnection": "Server=172.28.63.188;User=sa;Password=2wsx1qaz`;Database=TNF12;MultipleActiveResultSets=true"
